# tflite_add

./: CMakeLists.txt  README.md  add_test.cc  add_test.h  demo_add.cc  demo_main.cc  mul_test.cc  mul_test.h  test_util.cc  test_util.h
cmake/Modules/: FindTENSORFLOW_LITE.cmake  TargetArch.mk
